--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
@@ -87,7 +87,7 @@ a:visited { color: #fff; text-decoration: none; }
 ol, ul { list-style: none; margin: 0; padding: 0; }
 .clearfix li { float: left; }
 
-#header, #footer {
+#header, #footer, #searchlist {
   background: #222;
   background: rgba(0,0,0,0.7);
   width: 100%;
@@ -96,6 +96,35 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
   z-index: 1000;
 }
 #footer { bottom: 0; font-size: 12px; }
+
+#searchlist {
+  z-index: 1500;
+  text-align:left;
+  background: #222;
+}
+
+#searchlist .title {
+  text-align:center;
+}
+
+#searchlist .closebutton {
+  float: right;
+  margin-right:0.4em;
+  background: #CCC;
+}
+
+#searchlist .listbox {
+  background: #FFF;
+  overflow-x:hidden;
+  overflow-y: auto;
+}
+
+#searchlist li {
+    background: #FFF;
+    border-top: 1px solid #333;
+    width:100%;
+    padding:0.3em;
+}
 
 #main { position: relative; background: url('bg.png') 50% 50%; }
 
