Altered search link size so it is easier to click. Increased the number of results to 50

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
@@ -126,7 +126,8 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
     background: #FFF;
     border-top: 1px solid #333;
     width:100%;
-    padding:0.3em;
+    font-size:1.5em;
+    padding:0.5em;
     color: #222;
 }
 
