--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
@@ -101,6 +101,7 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
   z-index: 1500;
   text-align:left;
   background: #222;
+  display:none;
 }
 
 #searchlist .title {
