--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
@@ -128,7 +128,6 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
     border-top: 1px solid #333;
     width:100%;
     font-size:1.5em;
-    padding:0.5em;
     color: #222;
 }
 
@@ -136,6 +135,8 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
     display: block;
     color: #222;
     width:100%;
+    padding:0.5em;
+    cursor:pointer;
 }
 
 .closebutton {
@@ -145,6 +146,8 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
     padding: 5px;	
     float: right;
     margin-right:0.4em;
+    color: #222;
+    cursor:pointer;
 }
 
 #main { position: relative; background: url('bg.png') 50% 50%; }
