--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
@@ -107,6 +107,7 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
 #searchlist .title {
   text-align:center;
   padding: 0.5em;
+  font-size: 1.2em;
 }
 
 #searchlist .closebutton {
