Added a play time slider to the view which updates every second. Also allows you to move the slider on to a new time if controls are enabled to move through a track

--- a/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
+++ b/SpotifyRemoteMacOS/SpotifyRemoteMacOS/Server/Resources/Web/style.css
@@ -162,7 +162,7 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
 #main { position: relative; background: url('bg.png') 50% 50%; }
 
 #controls { position: absolute; bottom: 36px; width: 230px; margin-left: -115px; left: 50% }
-#controls a { display: block; width: 48px; height: 48px; background: url('sprite.png') no-repeat; font-size: 0; margin: 4px; }
+#controls li a { display: block; width: 48px; height: 48px; background: url('sprite.png') no-repeat; font-size: 0; margin: 4px; }
 
 #previous { background-position: -664px -8px !important; }
 #previous:hover { background-position: -664px -64px !important; }
@@ -177,6 +177,10 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
 #controls.off #playpause { background-position: -552px -120px !important; }
 #controls.off #playpause.pause:hover,
 #controls.off #playpause.pause { background-position: -608px -120px !important; }
+
+#playtime{ width: 100%; }
+#currtime, #totaltime { width: 30px; float: left; text-align:center; }
+#playtime_slider { width: 170px; float: left; margin-top:2px; }
 
 #shuffle { background-position: -552px -176px !important }
 #shuffle.shuffleon { background-position: -609px -176px !important }
@@ -202,7 +206,7 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
   body { font-size: 150%; }
 
   #controls { bottom: 50px; width: 576px; margin-left: -288px; left: 50% }
-  #controls a { width: 128px; height: 128px; margin: 8px; }
+  #controls li a { width: 128px; height: 128px; margin: 8px; }
 
   #previous { background-position: -280px -8px !important; }
   #previous:hover { background-position: -280px -144px !important; }
@@ -217,7 +221,11 @@ ol, ul { list-style: none; margin: 0; padding: 0; }
   #controls.off #playpause { background-position: -8px -280px !important; }
   #controls.off #playpause.pause:hover,
   #controls.off #playpause.pause { background-position: -144px -280px !important }
-  
+ 
+  #playtime{ width: 100%; }
+  #currtime, #totaltime { width: 100px; float: left; text-align:center; }
+  #playtime_slider { width: 376px; float: left; margin-top:7px; }
+
   #shuffle { background-position: -8px -416px !important }
   #shuffle:hover { background-position: -144px -416px !important }
   #shuffle.shuffleon { background-position: -144px -416px !important }
